Proposed changes in styles, fixed label overflow

--- a/src/pages/species/styles.scss
+++ b/src/pages/species/styles.scss
@@ -28,7 +28,7 @@ $sidebar-size: 330px;
       .species-chart-title {
           color: $color-gray-3;
           font-size: 16px;
-          margin-top: 20px;
+          margin: 20px 0;
 
           a {
             text-decoration: underline;
